<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.spsilab.locatethings.loginmodule.FindPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/str_find_password_inform"
            />
        <EditText
            android:id="@+id/edit_find_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/str_find_password"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_find_password_btn"
            />
    </LinearLayout>

</RelativeLayout>
