<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.spsilab.locatethings.loginmodule.UpdatePasswordFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/edit_new_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/str_update_password"
            />

        <EditText
            android:id="@+id/edit_repeat_new_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/str_update_password_repeat"
            />

        <Button
            android:id="@+id/btn_update_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/str_update_password_btn"
            />
    </LinearLayout>

</RelativeLayout>
