<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.spsilab.locatethings.loginmodule.RegistFragment">

    <RelativeLayout
        android:id="@+id/layout_regist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/layout_user_regist"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_regist_user_name"
                    android:paddingLeft="60dp"
                    android:paddingRight="40dp"
                    android:layout_width="match_parent"
                    android:hint="@string/str_login_user_name"
                    android:layout_height="60dp" />
                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:padding="8dp"
                    android:layout_gravity="start|center_vertical"
                    android:src="@drawable/login"
                    />
                <Button
                    android:id="@+id/btn_regist_clear_user_name"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/clear"
                    android:layout_gravity="end|center_vertical"
                    />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_regist_phone"
                    android:inputType="phone"
                    android:paddingLeft="60dp"
                    android:paddingRight="40dp"
                    android:hint="@string/str_regist_phone"
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />
                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:padding="8dp"
                    android:layout_gravity="start|center_vertical"
                    android:src="@drawable/phone"
                    />
                <Button
                    android:id="@+id/btn_clear_user_password"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/clear"
                    android:layout_gravity="end|center_vertical"
                    />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_regist_password"
                    android:inputType="textPassword"
                    android:paddingLeft="60dp"
                    android:paddingRight="40dp"
                    android:hint="@string/str_regist_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />
                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:padding="8dp"
                    android:layout_gravity="start|center_vertical"
                    android:src="@drawable/password"
                    />
                <Button
                    android:id="@+id/btn_clear_user_email"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/clear"
                    android:layout_gravity="end|center_vertical"
                    />
            </FrameLayout>


        </LinearLayout>
        <Button
            android:id="@+id/btn_regist"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/layout_user_regist"
            android:layout_marginTop="30dp"
            android:background="#ff336699"
            android:textColor="@android:color/white"

            android:gravity="center"
            android:text="@string/str_regist_btn" />
    </RelativeLayout>

</FrameLayout>
