<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#feee"
                android:orientation="vertical"
                tools:context="cn.spsilab.locatethings.UserInfoFragment">

    <LinearLayout
        android:id="@+id/layout_info_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_info_user_header"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/text_info_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_id"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/text_info_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_login_user_name"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/text_info_phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/str_regist_phone"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btn_info_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_info_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_info_user_header"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="invisible">

        <EditText
            android:id="@+id/edit_info_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_login_user_name"
            android:textAlignment="center"
            android:textColor="#ff00"/>

        <EditText
            android:id="@+id/edit_info_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_regist_phone"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="#ff00"/>

        <Button
            android:id="@+id/btn_info_edit_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sure"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_info_user_header"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:layout_gravity="center"
        android:contentDescription="header"
        android:src="@drawable/ab_android"/>
</RelativeLayout>
